benswork/UARProject/force-app/main/default/objects/Salesforce_License__c/Salesforce_License__c.object-meta.xml
<CustomObject>
    <label>Salesforce License</label>
    <nameField>
        <label>Salesforce License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>