benswork/UARProject/force-app/main/default/objects/Salesforce_License__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Salesforce Licenses</relationshipLabel>
    <relationshipName>Salesforce_Licenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>