benswork/UARProject/force-app/main/default/objects/Salesforce_License__c/fields/License_Id__c.field-meta.xml
<CustomField>
    <fullName>License_Id__c</fullName>
    <externalId>true</externalId>
    <label>License Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>