benswork/UARProject/force-app/main/default/objects/Salesforce_License__c/fields/Salesforce_Org__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Org</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Salesforce Licenses</relationshipLabel>
    <relationshipName>Salesforce_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>