benswork/UARProject/force-app/main/default/objects/Salesforce_License__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <label>User Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>